@@ -1,3 +1,11 @@
+2003-09-03  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_s2s_in.erl: Fixed "id" attribute processing
+	* src/ejabberd_s2s_out.erl: Likewise
+
+	* src/ejabberd_c2s.erl: Added sending of empty <stream:features/>
+	element after opening of authentificated stream
+
 2003-09-02  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_s2s_in.erl: Temporary hack for "id" attribute
@@ -111,7 +119,7 @@
 
 2003-07-05  Alexey Shchepin  <alexey@sevcom.net>
 
-	* src/jlib.hrl: Added pub/sub nemaspaces
+	* src/jlib.hrl: Added pub/sub namespaces
 
 2003-07-03  Alexey Shchepin  <alexey@sevcom.net>
 
@@ -221,7 +229,7 @@
 
 2003-05-08  Alexey Shchepin  <alexey@sevcom.net>
 
-	* src/mod_muc/mod_muc.erl: Denied using of empty nick
+	* src/mod_muc/mod_muc.erl: Denied usage of empty nick
 
 2003-05-07  Alexey Shchepin  <alexey@sevcom.net>
 
